--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@supabase/supabase-js": "^2.85.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
     "react": "^18.3.1",
